# image_viewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
build-windows/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-windows/CImgViewer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-windows/CImgViewer_autogen/UVLADIE3JM/: moc_AiTools.cpp.d  moc_BatchExportDialog.cpp.d  moc_CompareView.cpp.d  moc_ExifPanel.cpp.d  moc_FilterDialog.cpp.d  moc_HistogramWidget.cpp.d  moc_ImageLabel.cpp.d  moc_MainWindow.cpp.d  moc_ModelManager.cpp.d  moc_ModelManagerDialog.cpp.d
cmake/: Toolchain-mingw64.cmake
dist-windows/: qt.conf
dist-windows/translations/: cimg-viewer_pt_BR.qm
src/: AiTools.cpp  AiTools.hpp  AnnotationLayer.cpp  AnnotationLayer.hpp  BatchExportDialog.cpp  BatchExportDialog.hpp  CompareView.cpp  CompareView.hpp  ExifPanel.cpp  ExifPanel.hpp  FileManager.cpp  FileManager.hpp  FilterDialog.cpp  FilterDialog.hpp  HistogramWidget.cpp  HistogramWidget.hpp  ImageConvert.hpp  ImageLabel.cpp  ImageLabel.hpp  ImageProcessor.cpp  ImageProcessor.hpp  Logger.cpp  Logger.hpp  MainWindow.cpp  MainWindow.hpp  ModelManager.cpp  ModelManager.hpp  ModelManagerDialog.cpp  ModelManagerDialog.hpp  OnnxEngine.cpp  OnnxEngine.hpp  PanHandler.cpp  PanHandler.hpp  SegmentTool.cpp  SegmentTool.hpp  UndoStack.cpp  UndoStack.hpp  main.cpp
translations/: cimg-viewer_en.qm  cimg-viewer_en.ts  cimg-viewer_pt_BR.ts  make_qm.py  translations.qrc
